<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/first_installed_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/first_installed" />

        <TextView
            android:id="@+id/last_updated_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/last_update" />
    </LinearLayout>



        <Button
            android:id="@+id/btn_extract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/extract_apk_and_save" />

        <Button
            android:id="@+id/btn_extract_antisplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/antisplit_merge_and_save" />

        <Button
            android:id="@+id/btn_launch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/launch" />

        <Button
            android:id="@+id/btn_uninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uninstall"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extract_and_share"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btn_antisplit_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antisplit_merge_and_share"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/btn_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractBase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractDex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractLibs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractManifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/extractSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />
</LinearLayout>