<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:id="@+id/userApps"
            android:text="@string/user_apps" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:id="@+id/systemApps"
            android:text="@string/system_apps" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:paddingStart="8dp">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/settingsButton"
            android:layout_toStartOf="@id/settingsButton"
            android:hint="🔍"
            android:importantForAutofill="no"
            android:inputType="text" />

        <ImageView
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/filterButton"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/filterButton"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/settings"
            android:src="@drawable/settings" />

        <ImageView
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/confirmButton"
            android:layout_toStartOf="@id/confirmButton"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/filter"
            android:src="@android:drawable/ic_menu_sort_by_size" />

        <ImageView
            android:id="@+id/confirmButton"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/confirm"
            android:src="@android:drawable/checkbox_on_background" />
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/user_app_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ExpandableListView
        android:id="@+id/system_app_list_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
